--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "source": ".",
+    "source": "build",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -8,6 +8,6 @@
     ],
     "frameworksBackend": {
       "region": "us-central1"
-    }
+    }  
   }
 }
