--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint",
-    "preview": "vite preview"
+    "preview": "vite preview --open --port 8080 --host"
   },
   "dependencies": {
     "firebase": "^11.6.1",
