--- a/package.json
+++ b/package.json
@@ -4,18 +4,27 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "vite:dev": "vite",
+    "vite:build": "vite build",
     "lint": "eslint",
-    "preview": "vite preview --open --port 8080 --host"
+    "vite:preview": "vite preview --open --port 8080 --host",
+    "build": "react-router build",
+    "dev": "react-router dev",
+    "start": "react-router-serve ./build/server/index.js",
+    "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@react-router/node": "^7.6.0",
+    "@react-router/serve": "^7.6.0",
     "firebase": "^11.6.1",
+    "isbot": "^5.1.27",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router": "^7.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@react-router/dev": "^7.6.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
