--- a/package.json
+++ b/package.json
@@ -1,42 +1,37 @@
 {
-  "name": "myapp",
+  "name": "cozy-ttrpg",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "vite:dev": "vite",
-    "vite:build": "vite build",
-    "lint": "eslint",
-    "vite:preview": "vite preview --open --port 8080 --host",
     "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
-    "@react-router/node": "^7.6.0",
-    "@react-router/serve": "^7.6.0",
-    "firebase": "^11.6.1",
+    "@react-router/node": "^7.5.3",
+    "@react-router/serve": "^7.5.3",
+    "firebase": "^11.7.1",
     "isbot": "^5.1.27",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router": "^7.6.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-router": "^7.5.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.22.0",
-    "@react-router/dev": "^7.6.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@eslint/js": "^9.26.0",
+    "@react-router/dev": "^7.5.3",
+    "@types/node": "^20",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.22.0",
+    "eslint": "^9.26.0",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "express": "^5.1.0",
-    "globals": "^16.0.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
     "postcss": "^8.5.3",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.26.1",
-    "vite": "^6.3.1"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.32.0",
+    "vite": "^6.3.3",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
