--- a/firebase.json
+++ b/firebase.json
@@ -7,6 +7,9 @@
         "source": "**",
         "destination": "/index.html"
       }
+    ],
+    "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR\" run predeploy"
     ]
   },
   "functions": [
@@ -21,9 +24,24 @@
         "*.local"
       ],
       "predeploy": [
-        "npm --prefix \"$RESOURCE_DIR\" run lint",
-        "npm --prefix \"$RESOURCE_DIR\" run build"
+        "npm --prefix \"$RESOURCE_DIR\" run predeploy"
       ]
     }
-  ]
+  ],
+  "predeploy": [
+    "npm run predeploy"
+  ],
+  "emulators": {
+    "functions": {
+      "port": 5001
+    },
+    "firestore": {
+      "port": 8080,
+      "host": "localhost",
+      "targets": {
+        "default": "default",
+        "dev-default": "dev-default"
+      }
+    }
+  }
 }
