--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "react-router dev",
     "start": "npm run dev",
     "serve": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "typecheck": "react-router typegen && tsc",
+    "predeploy": "npm run typecheck && npm run build"
   },
   "dependencies": {
     "@react-router/node": "^7.5.3",
