--- a/functions/package.json
+++ b/functions/package.json
@@ -10,7 +10,10 @@
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
-    "predeploy": "npm run lint && npm run build"
+    "predeploy": "npm run build:shared && npm run lint && npm run build",
+    "force:kill": "kill -9 $(lsof -ti:5001,8080,9099,4000,9200,9300)",
+    "force:serve": "npm run force:kill && npm run serve",
+    "build:shared": "npm run -w shared build && cp -r ../shared/dist ./shared"
   },
   "engines": {
     "node": "22"
