--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -8,10 +8,17 @@
     "outDir": "lib",
     "sourceMap": true,
     "strict": true,
-    "target": "es2017"
+    "target": "es2017",
+    "paths": {
+      "~/*": ["./src/*"],
+      "@rhyeen/*": ["../shared/src/*"]
+    }
   },
   "compileOnSave": true,
   "include": [
     "src"
+  ],
+  "references": [
+    { "path": "../shared" }
   ]
 }
