--- a/functions/package.json
+++ b/functions/package.json
@@ -20,6 +20,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@rhyeen/cozy-ttrpg-shared": "^0.0.1",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1"
   },
