--- a/shared/package.json
+++ b/shared/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.2",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc",
     "build:watch": "tsc -w",
@@ -21,5 +23,8 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
     "typescript": "^5.4.0"
+  },
+  "dependencies": {
+    "buffer": "^6.0.3"
   }
 }
