--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,8 @@
     "baseUrl": ".",
     "esModuleInterop": true,
     "verbatimModuleSyntax": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true,
     "noEmit": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
