--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -8,7 +8,9 @@
     "outDir": "lib",
     "sourceMap": true,
     "strict": true,
-    "target": "es2017"
+    "target": "es2017",
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true
   },
   "compileOnSave": true,
   "include": [
