--- a/shared/package.json
+++ b/shared/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@rhyeen/cozy-ttrpg-shared",
-  "version": "0.0.6",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "version": "0.0.12",
+  "type": "commonjs",
+  "main": "./dist/index.js",
   "scripts": {
     "build": "tsc",
     "build:watch": "tsc -w",
