--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "typescript-eslint": "^8.32.0",
     "vite": "^6.3.3",
     "vite-plugin-commonjs": "^0.10.4",
+    "vite-plugin-devtools-json": "^0.2.0",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
