--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-router/serve": "^7.5.3",
     "@reduxjs/toolkit": "^2.8.1",
     "@rhyeen/cozy-ttrpg-shared": "^0.0.12",
+    "@uidotdev/usehooks": "^2.4.1",
     "firebase": "^11.7.1",
     "isbot": "^5.1.27",
     "react": "^19.1.0",
