--- a/firebase.json
+++ b/firebase.json
@@ -42,9 +42,15 @@
         "default": "default",
         "dev-default": "dev-default"
       }
+    },
+    "storage": {
+      "port": 9299
     }
   },
   "firestore": {
     "rules": "functions/firestore.rules"
+  },
+  "storage": {
+    "rules": "functions/storage.rules"
   }
 }
